<?xml version="1.0" encoding="utf-8"?><!--
/* Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dip"
            android:singleLine="true"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_host_list_add"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeightSmall"
                    android:gravity="bottom|start"
                    android:hint="@string/fragment_host_list_add_hint"
                    android:imeActionLabel="@string/fragment_host_list_add_action_label"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="supergreatnewdomain.com" />

                <ImageButton
                    android:id="@+id/fragment_host_list_add_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="?android:attr/listPreferredItemHeightSmall"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_done_grey600_36dp" />

            </RelativeLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"
                android:focusableInTouchMode="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/internalEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </FrameLayout>

</FrameLayout>
